[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1"
path = "src/day_1.rs"
[[bin]]
name = "day_2"
path = "src/day_2.rs"
[[bin]]
name = "day_3"
path = "src/day_3.rs"
[[bin]]
name = "day_4"
path = "src/day_4.rs"
[[bin]]
name = "day_5"
path = "src/day_5.rs"
[[bin]]
name = "day_6"
path = "src/day_6.rs"
[[bin]]
name = "day_7"
path = "src/day_7.rs"
[[bin]]
name = "day_8"
path = "src/day_8.rs"
[[bin]]
name = "day_9"
path = "src/day_9.rs"
[[bin]]
name = "day_10"
path = "src/day_10.rs"
[[bin]]
name = "day_11"
path = "src/day_11.rs"
[[bin]]
name = "day_12"
path = "src/day_12.rs"
[[bin]]
name = "day_13"
path = "src/day_13.rs"
[[bin]]
name = "day_14"
path = "src/day_14.rs"
[[bin]]
name = "day_15"
path = "src/day_15.rs"
[[bin]]
name = "day_16"
path = "src/day_16.rs"
[[bin]]
name = "day_17"
path = "src/day_17.rs"
[[bin]]
name = "day_18"
path = "src/day_18.rs"
[[bin]]
name = "day_19"
path = "src/day_19.rs"
[[bin]]
name = "day_20"
path = "src/day_20.rs"

[profile.release]
debug = true

[dependencies]
color-eyre = "0.5"
itertools = "0.10.5"
nom = "7.1.1"
petgraph = "0.6.2"
